# haskell-invertible-syntax-parsec

./: LICENSE  invertible-syntax-parsec.cabal
Text/Syntax/Check/: Parsec.hs
Text/Syntax/Parser/: Parsec.hs
Text/Syntax/Parser/Parsec/: Check.hs
debian/: changelog  control  rules
example/: Types.hs  binTerm.hs
